# code

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  llm.py  main.py  prompt.py  schema.py  security.py  validator.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
tests/: conftest.py  test_llm.py  test_prompt.py  test_security.py  test_sqlgen.py  test_validator.py
